--- a/package.json
+++ b/package.json
@@ -29,30 +29,27 @@
     "seed:revert": "cross-env MIGRATION_TYPE=seeds npm run typeorm:migration migration:revert"
   },
   "dependencies": {
-    "@nestjs/axios": "^3.0.1",
+    "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
-    "@nestjs/mapped-types": "*",
+    "@nestjs/mapped-types": "^2.0.4",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.2.7",
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/typeorm": "^10.0.0",
-    "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "cache-manager": "^4.1.0",
     "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
-    "csv-parser": "^3.0.0",
     "mysql2": "^3.6.2",
+    "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "reflect-metadata": "^0.1.13",
-    "request": "^2.88.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
   },
